website/i18n/zh-hant/docusaurus-plugin-content-docs/version-3.1.1/guides/docs/docs-introduction.mdx
---
id: introduction
sidebar_label: Introduction
slug: /docs-introduction
---

# 文件介紹

文件功能提供使用者以階層結構組織 Markdown 檔案的方式。

:::info

詳盡選項清單請參閱 [文件插件 API 參考文檔](./../../api/plugins/plugin-content-docs.mdx)。

:::

您網站的文檔按四個層級組織，由低到高分別為：

1. 個別頁面
2. 側邊欄
3. 版本
4. 插件實例

本指南將依此順序介紹：從[如何配置個別頁面](./docs-create-doc.mdx)開始，到[如何建立單一或多個側邊欄](./sidebar/index.mdx)，再到[如何建立與管理版本](./versioning.mdx)，最後是[如何使用多個文件插件實例](./docs-multi-instance.mdx)。

## 純文件模式 {#docs-only-mode}

新初始化的 Docusaurus 站點具有以下結構：

```
example.com/                                -> generated from `src/pages/index.js`

example.com/docs/intro                      -> generated from `docs/intro.md`
example.com/docs/tutorial-basics/...        -> generated from `docs/tutorial-basics/...`
...

example.com/blog/2021/08/26/welcome         -> generated from `blog/2021-08-26-welcome/index.md`
example.com/blog/2021/08/01/mdx-blog-post   -> generated from `blog/2021-08-01-mdx-blog-post.mdx`
...
```

所有文件將透過子路由 `docs/` 提供。但如果**您的站點僅包含文件**，或希望將文件置於根目錄以提升優先級該怎麼辦？

假設您的配置中包含以下內容：

```js title="docusaurus.config.js"
export default {
  // ...
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        docs: {
          /* docs plugin options */
        },
        blog: {
          /* blog plugin options */
        },
        // ...
      },
    ],
  ],
};
```

要啟用純文件模式，請修改為如下設定：

```js title="docusaurus.config.js"
export default {
  // ...
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        docs: {
          // highlight-next-line
          routeBasePath: '/', // Serve the docs at the site's root
          /* other docs plugin options */
        },
        // highlight-next-line
        blog: false, // Optional: disable the blog plugin
        // ...
      },
    ],
  ],
};
```

請注意，您**不一定需要放棄使用部落格**或其他插件功能；`routeBasePath: '/'` 的作用僅是將文件從 `https://example.com/docs/some-doc` 改為在站點根目錄提供：`https://example.com/some-doc`。若啟用部落格，仍可透過 `blog/` 子路由存取。

別忘了透過添加 front matter 在根目錄 (`https://example.com/`) 放置頁面：

```md title="docs/intro.md"
---
# highlight-next-line
slug: /
---

This page will be the home page when users visit https://example.com/.
```

:::warning

若您透過添加 `slug: /` 使某文件成為首頁，應刪除現有的 `./src/pages/index.js` 首頁檔案，否則將有兩個檔案映射至相同路由！

:::

現在，站點結構將如下所示：

```
example.com/                       -> generated from `docs/intro.md`
example.com/tutorial-basics/...    -> generated from `docs/tutorial-basics/...`
...
```

:::tip

對於僅需使用 Docusaurus 部落格功能的用戶，亦有「純部落格模式」可供選擇。您可採用上述相同方法，依照[純部落格模式](../../blog.mdx#blog-only-mode)的設定說明操作。

:::